results/SVCOMP/conversational/log-overloading1-2024_03_15_00_56_32.txt
class other_class {}
;

class Main {
    //@ ensures \result ==> f(1) != 1 || f(1.0d) != 2 || f(new other_class()) != 3;
    //@ ensures !\result ==> f(1) == 1 && f(1.0d) == 2 && f(new other_class()) == 3;
    public static boolean f() {
        if (f(1) == 1) return false;
        if (f(1.0d) == 2) return false;
        if (f(new other_class()) == 3) return false;
        return true;
    }

    //@ ensures \result == 1;
    public static int f(int i) {
        return 1;
    }

    //@ ensures \result == 2;
    public static int f(double d) {
        return 2;
    }

    //@ ensures \result == 3;
    public static int f(other_class o) {
        return 3;
    }
}
/home/max/Documents/JMLGPT/tmp/overloading1.java:5: error: Object allocation is not permitted in specification expressions
    //@ ensures \result ==> f(1) != 1 || f(1.0d) != 2 || f(new other_class()) != 3;
                                                           ^
/home/max/Documents/JMLGPT/tmp/overloading1.java:6: error: Object allocation is not permitted in specification expressions
    //@ ensures !\result ==> f(1) == 1 && f(1.0d) == 2 && f(new other_class()) == 3;
                                                            ^
2 errors

class other_class {}
;

class Main {
    //@ ensures \result ==> f(1) != 1 || f(1.0d) != 2 || f(new other_class()) != 3;
    //@ ensures !\result ==> f(1) == 1 && f(1.0d) == 2;
    public static boolean f() {
        if (f(1) == 1) return false;
        if (f(1.0d) == 2) return false;
        if (f(new other_class()) == 3) return false;
        return true;
    }

    //@ ensures \result == 1;
    public static int f(int i) {
        return 1;
    }

    //@ ensures \result == 2;
    public static int f(double d) {
        return 2;
    }

    //@ ensures \result == 3;
    public static int f(other_class o) {
        return 3;
    }
}
/home/max/Documents/JMLGPT/tmp/overloading1.java:5: error: Object allocation is not permitted in specification expressions
    //@ ensures \result ==> f(1) != 1 || f(1.0d) != 2 || f(new other_class()) != 3;
                                                           ^
1 error

class other_class {}
;

class Main {
    //@ ensures \result ==> f(1) != 1 || f(1.0d) != 2 || f(null) != 3;
    //@ ensures !\result ==> f(1) == 1 && f(1.0d) == 2;
    public static boolean f() {
        if (f(1) == 1) return false;
        if (f(1.0d) == 2) return false;
        if (f(null) == 3) return false;
        return true;
    }

    //@ ensures \result == 1;
    public static int f(int i) {
        return 1;
    }

    //@ ensures \result == 2;
    public static int f(double d) {
        return 2;
    }

    //@ ensures \result == 3;
    public static int f(other_class o) {
        return 3;
    }
}

